--- a/Views/Anchor/Index.cshtml
+++ b/Views/Anchor/Index.cshtml
@@ -610,7 +610,7 @@
                 IsCustomCover:$('#custom_cover_switch').hasClass('sui-active')?"true":"false"
             }, function (res) {
                 if (res.success) {
-                    layer.msg("修改成功");
+                    layer.msg("保存成功");
                 } else {
                     layer.msg(res.message);
                 }
