--- a/wwwroot/css/myStyle.css
+++ b/wwwroot/css/myStyle.css
@@ -182,6 +182,7 @@ a {
 
 
 .Title-categoryItem {
+    margin-right:5px;
     float: left;
     vertical-align: top;
     height: 18px;
@@ -1238,3 +1239,35 @@ input:-webkit-autofill {
     background-size: cover;
     display: inline-block;
 }
+
+
+.nav_class_list {
+    margin-left:10px;
+    display: inline-block;
+}
+
+    .nav_class_list span {
+        border: 1px solid #dadada;
+        width: 90px;
+        height: 32px;
+        display: inline-block;
+        line-height: 32px;
+        text-align: center;
+        border-radius: 15px;
+        cursor: pointer;
+        background-color: #fff;
+        color: #555;
+        margin-right:5px;
+    }
+
+        .nav_class_list span:hover {
+            border: 1px solid #ff5d23;
+            color: #ff5d23;
+            background-color: #fff;
+        }
+
+        .nav_class_list span.active {
+            border: 1px solid #ff5d23;
+            color: #fff;
+            background-color: #ff5d23;
+        }
