--- a/Views/Anchor/Index.cshtml
+++ b/Views/Anchor/Index.cshtml
@@ -176,6 +176,14 @@
                     <div id="room_form">
                         <div style="vertical-align:middle;margin-bottom:10px;">
                             <span style="text-align:right;width:100px;display:inline-block;color:#777;vertical-align: middle;">
+                                房间号
+                            </span>
+                            <span style="display:inline-block;margin-left:20px;color:#777;">
+                                @Html.Raw(ViewBag.RoomInfo.RoomNum)
+                            </span>
+                        </div>
+                        <div style="vertical-align:middle;margin-bottom:10px;">
+                            <span style="text-align:right;width:100px;display:inline-block;color:#777;vertical-align: middle;">
                                 房间标题
                             </span>
                             <span style="display:inline-block;margin-left:20px;color:#777;">
