--- a/Views/Room/Index.cshtml
+++ b/Views/Room/Index.cshtml
@@ -531,6 +531,7 @@
                     obj.message = s;
                     obj.color = BarrageColor;
                     obj.sender = asset.nickName;
+                    obj.userid = user;
                     //console.log(obj);
                     ws.send(JSON.stringify(obj));
                 }
