--- a/Views/Search/Index.cshtml
+++ b/Views/Search/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Entities;
+@using mvc.Entities;
 @{
     Layout = null;
 }
@@ -17,20 +18,20 @@
     <link href="~/css/myStyle.css" rel="stylesheet" />
 </head>
 <body>
-    <nav class="navbar navbar-default navbar-fixed-top" style="background-color:rgba(255, 255, 255, 0.95);z-index:1000;">
-        <div id="div_header_container" class="container">
+    <nav class="navbar navbar-default navbar-fixed-top" style="background-color:rgb(255, 255, 255);z-index:10000;">
+        <div class="container" id="div_header_container">
             <div class="navbar-header">
                 <a class="navbar-brand" href="/"><span class="top_header_item">首页</span></a>
             </div>
             <div class="navbar-header">
-                <a class="navbar-brand" href="/Directory/0"><span class="top_header_item">直播</span></a>
+                <a class="navbar-brand nav-active" href="/Directory/0"><span class="top_header_item">直播</span></a>
             </div>
             <div class="navbar-header">
-                <a class="navbar-brand nav-active" href="/Class"><span class="top_header_item">分类</span></a>
+                <a class="navbar-brand" href="/Class"><span class="top_header_item">分类</span></a>
             </div>
             <div class="navbar-header" style="padding-top:8px;padding-bottom:8px;box-sizing:border-box;height:50px;">
                 <div class="header-search">
-                    <input type="text" id="txt_search" readonly onfocus="this.removeAttribute('readonly');" autocomplete="off" />
+                    <input type="text" id="txt_search" value="@ViewBag.Keyword" placeholder="搜索" readonly onfocus="this.removeAttribute('readonly');" autocomplete="off" />
                     <div class="header-search-btn">
                         <img style="width:20px;height:20px;" src="../fonts/Search_24.14055636896px_1181298_easyicon.net.png" />
                     </div>
@@ -43,14 +44,65 @@
                     <a href="javascript:;" class="a_rightTop" id="a_reg" onclick="ShowRegDlg()">注册</a>
                 </div>
                 <div id="div_login_ed_panel" style="display:inline-block;display:none;">
-                    <img id="head_right_top" style="width:36px;height:36px;border-radius:18px;margin-right:2px;cursor:pointer;" onclick="location.href='/Personal'" src="@Html.Raw(ViewBag.UserAsset == null ? "" : ViewBag.UserAsset.HeadIcon)" />
-                    <a href="/Personal" class="a_rightTop" id="a_user"></a>
-                    <span id="_shuxian2" style="font-size: 16px;line-height: 50px;">|</span>
-                    <a href="javascript:;" class="a_rightTop" id="a_logout">注销</a>
+                    <div class="_group_user" style="display:inline-block;cursor:pointer; " onclick="location.href='/Personal'">
+                        <img class="head_right_top" style="width:36px;height:36px;border-radius:18px;margin-right:5px;cursor:pointer;" />
+                        <a href="/Personal" class="a_rightTop a_user"></a>
+                    </div>
+                    <div class="padnel_head_right_top">
+                        <div class="div_arrow"></div>
+                        <a href="javascript:;" class="a_log_out" id="a_logout"><div class="header-exit-icon"></div><span>退出</span></a>
+                        <div style="width:64px;height:64px;margin:10px auto 0 auto;">
+                            <img class="head_right_top" style="height:100%;width:100%;border-radius:32px;cursor:pointer;"
+                                 onclick="location.href='/Personal'" />
+                        </div>
+                        <div style="width:100%;text-align:center;">
+                            <span class="a_user" style="padding-left:5px;"></span>
+                            <span class="_sex" style="vertical-align:middle;"></span>
+                            <br />
+                            <span class="_sign" style="font-size:12px;"></span>
+                        </div>
+                        <div class="div_level_bar_wrap">
+                            <div class="div_level_bar">
+                                <span class="div_level_bar_cur_level">LV1</span>
+                                <div class="div_level_bar_containter">
+                                    <span>0/100</span>
+                                    <div class="div_level_bar_scroll"></div>
+                                </div>
+                                <span class="div_level_bar_nex_level">LV2</span>
+                            </div>
+                        </div>
+                        <div class="div_wallet_wrap">
+                            <div class="div_wallet_float_chongzhi orange_btn" onclick="layer.msg('暂未开启')">充值</div>
+                            <div style="color:#555;">钱包</div>
+                            <div style="margin-top:5px;">
+                                <span class="span_gold">金币&nbsp;&nbsp;0</span>
+                                <span class="span_siliver">银币&nbsp;&nbsp;0</span>
+                            </div>
+                        </div>
+                        <div class="div_task_wrap">
+                            <div class="div_task_wrap_top_line"></div>
+                            <div style="margin-left:13px;margin-right:13px;margin-top:5px;">
+                                <a style="display:none;float:right;" class="a_normal" href="/Personal/DailyTask">更多</a>
+                                <div style="color:#555;">每日任务</div>
+                                <div class="div_task_list">
+                                    @*<div class="div_task_list_item">
+                                            <span class="div_task_list_item_progress">0/1</span>
+                                            <span class="div_task_list_item_discribe">观看1次直播</span>
+                                            <span class="div_task_list_item_exp">(+20EXP)</span>
+                                        </div>*@
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+
+
+
                 </div>
             </div>
         </div>
     </nav>
+
 
     <div class="left" id="left">
         @{
@@ -101,6 +153,47 @@
         </div>
         <div class="Aside-toggle Aside-toggle-Shark" style="text-align:center;display:none;">
             <span style="line-height:80px;color:#a7a7a7;">></span>
+        </div>
+    </div>
+
+    <div class="div_main_content_warp">
+        <div class="div_main_content">
+            <div style="padding-bottom:10px;vertical-align:middle;">
+                <span style="font-size:30px;display:inline-block;vertical-align:middle;">
+
+                    <span>相关直播</span>
+
+                </span>
+            </div>
+            <div class="div_room_item_container" id="room_container_1">
+                @* @{
+                        List<BroadcastRoomDTO> list = new List<BroadcastRoomDTO>(); //ViewBag.RoomList as List<BroadcastRoomDTO>;
+
+                    }
+                    @foreach (var item in list)
+                    {
+                        <a class="div_romm_item" href="/Room/@Html.Raw(item.Room.RoomNum)">
+                            <div class="div_room_item_cover">
+
+                        <img class="img_room_item_cover"
+                             src=" @Html.Raw(string.IsNullOrWhiteSpace(item.Room.CoverUrl)?"/fonts/black.png":item.Room.CoverUrl)" />
+                        <div class="img_room_item_cover_mask"></div>
+                        <img class="img_room_item_cover_mask_play" src="~/fonts/play-icon_a.png" />
+                    </div>
+                    <div class="div_room_item_bottom">
+                        <div class="div_room_item_bottom_room_name">@Html.Raw(item.Room.Name)</div>
+                        <div class="div_room_item_bottom_head_row">
+                            <div class="div_room_item_bottom_class">@Html.Raw(item.LiveClass.Name)</div>
+                            <img class="div_room_item_bottom_head" src="@Html.Raw(item.UserAsset.HeadIcon)" />
+                            <div class="div_room_item_bottom_anchor_name">
+                                @Html.Raw(item.UserAsset.NickName)
+                            </div>
+                        </div>
+                    </div>
+                    </a>
+                    }
+                *@
+            </div>
         </div>
     </div>
 
@@ -162,17 +255,31 @@
     </div>
     <script type="text/javascript">
 
-        var user = '@ViewBag.User';
-        user = unescape(user.replace(/&#x/g, '%u').replace(/;/g, ''));
+        var user = '@Html.Raw(ViewBag.User)';
+        //user = unescape(user.replace(/&#x/g, '%u').replace(/;/g, ''));
 
-        var asset = '@ViewBag.UserAssetJson';
+
+        function decode(val) {
+            if (val != null)
+                return val.replace(/&#x/g, '%u').replace(/;/g, '');
+            return '';
+        }
+
+        var asset = '@Html.Raw(ViewBag.UserAssetJson)';
 
         if (asset != 'null') {
-            asset = JSON.parse(asset.replace(/&quot;/gi, '"'));
+            asset = JSON.parse(asset);
         } else {
             asset = null;
         }
 
+        var data = '@Html.Raw(ViewBag.ListJson)';
+
+        if (data != 'null') {
+            data = JSON.parse(data);
+        } else {
+            data = null;
+        }
         function getStyle(obj, styleName) {
             if (obj.currentStyle) { return obj.currentStyle[styleName]; } else {
                 return getComputedStyle(obj, null)[styleName];
@@ -193,8 +300,68 @@
             }
         }
 
+        function getNextExp(val) {
+            return parseInt(val) * 100;
+        }
+
+        function resize() {
+            $('.div_main_content_warp').css('margin-left',$('.left').width()+14+'px');
+        }
+
+
+        function setList(data) {
+
+            var str = '';
+            $.each(data, function (i, item) {
+                str += '<a class="div_romm_item" href="/Room/' + item.room.roomNum + '"><div class="div_room_item_cover">';
+                str += '<img class="img_room_item_cover" onerror="this.src=\'/fonts/black.png\';this.onerror=null;" src="' +
+                    (item.room.isCustomCover ? item.room.coverUrl : ("/upload/cover/" + item.room.streamChannel + '.jpg')) + '" />';
+                str += '<div class="img_room_item_cover_mask"></div><img class="img_room_item_cover_mask_play" src="/fonts/play-icon_a.png" /></div>';
+                str += '<div class="div_room_item_bottom"><div class="div_room_item_bottom_room_name">' + item.room.name + '</div>';
+                str += '<div class="div_room_item_bottom_head_row"><div class="div_room_item_bottom_class">' + item.liveClass.name + '</div>';
+                str += '<img class="div_room_item_bottom_head" src="' + item.userAsset.headIcon + '" /><div class="div_room_item_bottom_anchor_name">';
+                str += item.userAsset.nickName + '</div></div></div></a>';
+            });
+            $('#room_container_1').empty().append($(str));
+        }
+
+        function GetListByClassId(id) {
+
+            $.post('/api/Directory/' + id, {}, function (res) {
+                if (res.success) {
+                    setList(res.data);
+                }
+
+            });
+
+            @*<a class="div_romm_item" href="/Room/@Html.Raw(item.Room.RoomNum)">
+                        <div class="div_room_item_cover">
+                            <img class="img_room_item_cover"
+                                 src=" @Html.Raw(string.IsNullOrWhiteSpace(item.Room.CoverUrl)?"/fonts/black.png":item.Room.CoverUrl)" />
+
+                            <div class="img_room_item_cover_mask"></div>
+                            <img class="img_room_item_cover_mask_play" src="~/fonts/play-icon_a.png" />
+                        </div>
+                        <div class="div_room_item_bottom">
+                            <div class="div_room_item_bottom_room_name">@Html.Raw(item.Room.Name)</div>
+                            <div class="div_room_item_bottom_head_row">
+                                <div class="div_room_item_bottom_class">@Html.Raw(item.LiveClass.Name)</div>
+                                <img class="div_room_item_bottom_head" src="@Html.Raw(item.UserAsset.HeadIcon)" />
+
+                                <div class="div_room_item_bottom_anchor_name">
+                                    @Html.Raw(item.UserAsset.NickName)
+                                </div>
+                            </div>
+                        </div>
+                    </a>*@
+        }
+
+
+
         $(function () {
 
+            //GetListByClassId(classid);
+            setList(data);
             $('#btnReg').off('click').on('click', function () {
                 var username = $('#txtRegUser').val();
                 var password = $('#txtRegPass').val();
@@ -234,15 +401,16 @@
                 $('.Aside-toggle-Expand,.left_expand').hide();
                 $('.Aside-toggle-Shark,.left_shark').show();
                 $('.left').css('width', '0');
-                //resize();
+                resize&&resize();
             });
 
             $('.Aside-toggle-Shark').off('click').on('click', function (e) {
                 $('.Aside-toggle-Expand,.left_expand').show();
                 $('.Aside-toggle-Shark,.left_shark').hide();
                 $('.left').css('width', '240px');
-                //resize();
+                resize && resize();
             });
+
 
 
             $('.header-search-btn ').click(function () {
@@ -255,12 +423,28 @@
                 }
             });
 
+            $('._group_user').hover(function () {
+                UpadteUserAsset();
+                GetDailyTask();
+            }, function () {
+
+                });
+            $('.nav_class_list').on('click', 'span', function () {
+                var _this = $(this);
+                if (!_this.hasClass('active')) {
+                    var id = _this.data('value');
+                    _this.addClass('active').siblings().removeClass('active');
+                    GetListByClassId(id);
+                }
+            });
 
             if (user != '') {
                 ShowAfterLogin();
             }
 
             $('#right_top_float').show();
+
+            resize && resize();
         });
 
         function Login(username , pwd ,code) {
@@ -272,7 +456,6 @@
                     layer.closeAll();
                     user = res.data[0].userName;
                     asset = res.data[1];
-                    $('#head_right_top').attr('src', asset.headIcon);
                     ShowAfterLogin();
                 } else {
                     layer.msg(res.message);
@@ -280,9 +463,84 @@
             });
         }
 
+        function UpadteUserAsset() {
+            //更新用户信息
+            $.post('/api/User/GetUserAsset', {}, function (res) {
+                if (res.success) {
+                    asset = res.data;
+                    SetUserAsset(asset);
+                }
+            });
+        }
+
+        function compleTask(id) {
+            $.post('/api/User/CompleteTask', { id: id }, function (res) {
+                if (res.success) {
+                    UpadteUserAsset();
+                    GetDailyTask();
+                } else {
+                    layer.msg(res.message);
+                }
+            });
+        }
+
+        function GetDailyTask() {
+            //获取每日任务
+            $.post('/api/User/GetDailyTask', {}, function (res) {
+                var data = res.data;
+                var str = '';
+                $.each(data, function (i, v) {
+                    if (v.currentCount >= v.totalCount) {
+                        if (v.isComplete) {
+                            str += '<div class="div_task_list_item"><span class="div_task_list_item_progress_received">';
+                            str += '已完成</span>';
+                        } else {
+                            str += '<div class="div_task_list_item"><span class="div_task_list_item_progress_complete" onclick="compleTask(' + v.id + ')">';
+                            str += '领取</span>';
+                        }
+                    } else {
+                        str += '<div class="div_task_list_item"><span class="div_task_list_item_progress">';
+                        str += v.currentCount + '/' + v.totalCount + '</span>';
+                    }
+                    str += '<span class="div_task_list_item_discribe">';
+                    str += v.discribe + '</span><span class="div_task_list_item_exp">(+' + v.exp + 'EXP)</span> </div>';
+                });
+                $('.div_task_list').empty().append($(str));
+            });
+        }
+
+        function SetUserAsset(asset) {
+            $('#a_user,.a_user').text(asset.nickName);
+            var headIcon = asset.headIcon;
+            $('.head_right_top').each(function (i, o) {
+                $(this).attr('src', headIcon );
+            });
+            var sex = asset.sex;
+            if (sex == "男") {
+                $('._sex').removeClass("personal_female").addClass("personal_male");
+            } else {
+                $('._sex').removeClass("personal_male").addClass("personal_female");
+            }
+            if (asset.sign) {
+                $('._sign').empty().text(asset.sign);
+            } else {
+                $('._sign').empty().append($('<a class="_a_edit_sign" href="/Personal/EditInfo" >点击编辑个性签名</a>'));
+            }
+            var exp = parseInt(asset.exp);
+            var level = asset.level;
+            var nextExp = getNextExp(level);
+            $('.div_level_bar_containter span').text(exp + '/' + nextExp);
+            $('.div_level_bar_cur_level').text('LV' + level);
+            $('.div_level_bar_nex_level').text('LV' + (parseInt(level) + 1));
+            $('.div_level_bar_scroll').css('width', (exp / nextExp) * 100 + '%');
+            $('.span_gold').html('金币&nbsp;&nbsp;' + parseInt(asset.gold));
+            $('.span_siliver').html('银币&nbsp;&nbsp;' + parseInt(asset.silver));
+
+        }
+
         function ShowAfterLogin() {
             $('#div_login_panel').hide();
-            $('#a_user').text(user);
+            SetUserAsset(asset);
             $('#div_login_ed_panel').show();
             $("#a_logout").show().off('click').on('click', function () {
                 $.post('../api/User/LogOut', {}, function (res) {
